[tool.poetry]
name = "acolyte"
version = "0.0.1"
description = "Speech based DND game cordinator. A little acolyte for your dungeon!"
authors = ["Alfred Johnson <alfjohnfred@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
black = "^22.1.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
bandit = "^1.7.4"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
